<resources>
    <string name="app_name">ProjetoSeries</string>
    <string name="login">login</string>
    <string name="senha">senha</string>
    <string name="log_in_button">Log in</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="s_rie">Série</string>
    <string name="cadastro">Cadastro de série</string>
    <string name="addInformation">Adicione todas as informações necessárias para cadastrar essa série</string>
    <string name="titulo">Título da série</string>
    <string name="sinopse">Sinopse</string>
</resources>